--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "prettier.trailingComma": "none",
     "prettier.arrowParens": "avoid",
     "prettier.printWidth": 100,
+    "prettier.tabWidth": 4,
     "editor.tabSize": 4
 }
